# demo_qt_app

./: .gitignore  CMakeLists.txt  brew.md  grplot.cpp  macos.md  mainwindow.cpp  mainwindow.ui  readme.md  windows.md
Formula/: gr-demo.rb
src/: grplot.h
win/config/: config.xml
